--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-05-28 周四 21:32 -->
+<!-- 2020-06-05 周五 00:04 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>比克曼的知识管理</title>
@@ -238,120 +238,120 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org232935d">1. 数学</a></li>
-<li><a href="#org4a1002d">2. 算法</a></li>
-<li><a href="#org345a41b">3. 协议</a></li>
-<li><a href="#org9b43fda">4. 软件</a></li>
-<li><a href="#org806b56e">5. 硬件</a></li>
-<li><a href="#org891ac3b">6. 工具</a></li>
-<li><a href="#org5e24f13">7. 信号系统</a></li>
-<li><a href="#org78eecc8">8. 操作系统</a></li>
-<li><a href="#orge4744f3">9. 通信</a></li>
-<li><a href="#org1112a45">10. 安全</a></li>
-<li><a href="#org0379a6f">11. 附录</a>
+<li><a href="#orgbbe8acd">1. 数学</a></li>
+<li><a href="#org5757a5f">2. 算法</a></li>
+<li><a href="#org3c0a7ce">3. 协议</a></li>
+<li><a href="#orgbef0221">4. 软件</a></li>
+<li><a href="#orge94415f">5. 硬件</a></li>
+<li><a href="#org4daa6f8">6. 工具</a></li>
+<li><a href="#org6ca2392">7. 信号系统</a></li>
+<li><a href="#org865ba75">8. 操作系统</a></li>
+<li><a href="#orgee5450e">9. 通信</a></li>
+<li><a href="#org3b2483f">10. 安全</a></li>
+<li><a href="#org9126d14">11. 附录</a>
 <ul>
-<li><a href="#orgcdf73f4">11.1. 帮助</a>
+<li><a href="#orgc1fbf1e">11.1. 帮助</a>
 <ul>
-<li><a href="#orgde5ac31">11.1.1. blog生成</a></li>
+<li><a href="#org78b61ad">11.1.1. blog生成</a></li>
 </ul>
 </li>
-<li><a href="#org90a726d">11.2. 公钥指纹</a></li>
+<li><a href="#org977d125">11.2. 公钥指纹</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org232935d" class="outline-2">
-<h2 id="org232935d"><span class="section-number-2">1</span> <a href="./math.html">数学</a></h2>
+<div id="outline-container-orgbbe8acd" class="outline-2">
+<h2 id="orgbbe8acd"><span class="section-number-2">1</span> <a href="./math.html">数学</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 汇总工作中需要用到数学知识。
 </p>
 </div>
 </div>
-<div id="outline-container-org4a1002d" class="outline-2">
-<h2 id="org4a1002d"><span class="section-number-2">2</span> <a href="./algorithm.html">算法</a></h2>
+<div id="outline-container-org5757a5f" class="outline-2">
+<h2 id="org5757a5f"><span class="section-number-2">2</span> <a href="./algorithm.html">算法</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 总结各种机器学习,数据挖掘等的理念、工具、算法等, 以及数字图像处理知识。
 </p>
 </div>
 </div>
-<div id="outline-container-org345a41b" class="outline-2">
-<h2 id="org345a41b"><span class="section-number-2">3</span> <a href="./protocol.html">协议</a></h2>
+<div id="outline-container-org3c0a7ce" class="outline-2">
+<h2 id="org3c0a7ce"><span class="section-number-2">3</span> <a href="./protocol.html">协议</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 总结工作中遇到的各种协议，包括大族协议，小族协议等。
 </p>
 </div>
 </div>
-<div id="outline-container-org9b43fda" class="outline-2">
-<h2 id="org9b43fda"><span class="section-number-2">4</span> <a href="./software.html">软件</a></h2>
+<div id="outline-container-orgbef0221" class="outline-2">
+<h2 id="orgbef0221"><span class="section-number-2">4</span> <a href="./software.html">软件</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 总结软件开发的一些理论，技巧，编程语言等。
 </p>
 </div>
 </div>
-<div id="outline-container-org806b56e" class="outline-2">
-<h2 id="org806b56e"><span class="section-number-2">5</span> <a href="./hardware.html">硬件</a></h2>
+<div id="outline-container-orge94415f" class="outline-2">
+<h2 id="orge94415f"><span class="section-number-2">5</span> <a href="./hardware.html">硬件</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 总结硬件中的数字电路、模拟电路、射频、器件、芯片内核等。
 </p>
 </div>
 </div>
-<div id="outline-container-org891ac3b" class="outline-2">
-<h2 id="org891ac3b"><span class="section-number-2">6</span> <a href="./tool.html">工具</a></h2>
+<div id="outline-container-org4daa6f8" class="outline-2">
+<h2 id="org4daa6f8"><span class="section-number-2">6</span> <a href="./tool.html">工具</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 总结工作中用到的工具，emacs、latex、git、软件工具等。
 </p>
 </div>
 </div>
-<div id="outline-container-org5e24f13" class="outline-2">
-<h2 id="org5e24f13"><span class="section-number-2">7</span> <a href="./signal.html">信号系统</a></h2>
+<div id="outline-container-org6ca2392" class="outline-2">
+<h2 id="org6ca2392"><span class="section-number-2">7</span> <a href="./signal.html">信号系统</a></h2>
 <div class="outline-text-2" id="text-7">
 <p>
 总结信号与系统的方方面面。
 </p>
 </div>
 </div>
-<div id="outline-container-org78eecc8" class="outline-2">
-<h2 id="org78eecc8"><span class="section-number-2">8</span> <a href="./os.html">操作系统</a></h2>
+<div id="outline-container-org865ba75" class="outline-2">
+<h2 id="org865ba75"><span class="section-number-2">8</span> <a href="./os.html">操作系统</a></h2>
 <div class="outline-text-2" id="text-8">
 <p>
 总结工作中用到的操作系统，Android、Linux、嵌入式操作系统等。
 </p>
 </div>
 </div>
-<div id="outline-container-orge4744f3" class="outline-2">
-<h2 id="orge4744f3"><span class="section-number-2">9</span> <a href="./communication.html">通信</a></h2>
+<div id="outline-container-orgee5450e" class="outline-2">
+<h2 id="orgee5450e"><span class="section-number-2">9</span> <a href="./communication.html">通信</a></h2>
 <div class="outline-text-2" id="text-9">
 <p>
 总结通信系统的方方面面，从基础到LTE。
 </p>
 </div>
 </div>
-<div id="outline-container-org1112a45" class="outline-2">
-<h2 id="org1112a45"><span class="section-number-2">10</span> <a href="./security.html">安全</a></h2>
+<div id="outline-container-org3b2483f" class="outline-2">
+<h2 id="org3b2483f"><span class="section-number-2">10</span> <a href="./security.html">安全</a></h2>
 <div class="outline-text-2" id="text-10">
 <p>
 总结安全行业相关概念和心得。
 </p>
 </div>
 </div>
-<div id="outline-container-org0379a6f" class="outline-2">
-<h2 id="org0379a6f"><span class="section-number-2">11</span> 附录</h2>
+<div id="outline-container-org9126d14" class="outline-2">
+<h2 id="org9126d14"><span class="section-number-2">11</span> 附录</h2>
 <div class="outline-text-2" id="text-11">
 </div>
-<div id="outline-container-orgcdf73f4" class="outline-3">
-<h3 id="orgcdf73f4"><span class="section-number-3">11.1</span> 帮助</h3>
+<div id="outline-container-orgc1fbf1e" class="outline-3">
+<h3 id="orgc1fbf1e"><span class="section-number-3">11.1</span> 帮助</h3>
 <div class="outline-text-3" id="text-11-1">
 </div>
-<div id="outline-container-orgde5ac31" class="outline-4">
-<h4 id="orgde5ac31"><span class="section-number-4">11.1.1</span> blog生成</h4>
+<div id="outline-container-org78b61ad" class="outline-4">
+<h4 id="org78b61ad"><span class="section-number-4">11.1.1</span> blog生成</h4>
 <div class="outline-text-4" id="text-11-1-1">
 <ul class="org-ul">
 <li>修改<a href="file:///c:/soft/emacs/.emacs.d/org-mode/bitman-org-blog.el">file:///c:/soft/emacs/.emacs.d/org-mode/bitman-org-blog.el</a>中的
@@ -361,8 +361,8 @@ org-publish-project-alist变中的blog路径，并使之生效；</li>
 </div>
 </div>
 </div>
-<div id="outline-container-org90a726d" class="outline-3">
-<h3 id="org90a726d"><span class="section-number-3">11.2</span> 公钥指纹</h3>
+<div id="outline-container-org977d125" class="outline-3">
+<h3 id="org977d125"><span class="section-number-3">11.2</span> 公钥指纹</h3>
 <div class="outline-text-3" id="text-11-2">
 <p>
 我的公钥指纹：
@@ -385,7 +385,7 @@ gpg --keyserver hkps://hkps.pool.sks-keyservers.net --search-keys bitman@163.com
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2020-05-28 周四 21:32</p>
+<p class="date">Created: 2020-06-05 周五 00:04</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
