git submodule  guide

--- a/sitemap.html
+++ b/sitemap.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-07-14 周二 11:35 -->
+<!-- 2020-07-29 周三 21:49 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sitemap</title>
@@ -232,9 +232,9 @@ for the JavaScript code in this tag.
 <div id="content">
 <h1 class="title">Sitemap</h1>
 <ul class="org-ul">
+<li><a href="tool.html">工具</a></li>
 <li><a href="hardware.html">硬件</a></li>
 <li><a href="software.html">软件</a></li>
-<li><a href="tool.html">工具</a></li>
 <li><a href="signal.html">信号与系统</a></li>
 <li><a href="security.html">°²È«</a></li>
 <li><a href="protocol.html">协议</a></li>
@@ -251,7 +251,7 @@ for the JavaScript code in this tag.
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2020-07-14 周二 11:35</p>
+<p class="date">Created: 2020-07-29 周三 21:49</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
