add bulk rename operation to DIRED mode of emacs

--- a/security.html
+++ b/security.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-06-05 周五 00:05 -->
+<!-- 2020-11-20 周五 23:37 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>°²È«</title>
@@ -235,23 +235,23 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgf1544a9">1. ¹úÃÜ</a></li>
-<li><a href="#orga374084">2. ÉÌÃÜ</a></li>
+<li><a href="#org8594a0a">1. ¹úÃÜ</a></li>
+<li><a href="#orgade55a0">2. ÉÌÃÜ</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgf1544a9" class="outline-2">
-<h2 id="orgf1544a9"><span class="section-number-2">1</span> ¹úÃÜ</h2>
+<div id="outline-container-org8594a0a" class="outline-2">
+<h2 id="org8594a0a"><span class="section-number-2">1</span> ¹úÃÜ</h2>
 </div>
-<div id="outline-container-orga374084" class="outline-2">
-<h2 id="orga374084"><span class="section-number-2">2</span> ÉÌÃÜ</h2>
+<div id="outline-container-orgade55a0" class="outline-2">
+<h2 id="orgade55a0"><span class="section-number-2">2</span> ÉÌÃÜ</h2>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: ±È¿ËÂü</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<p class="date">Created: 2020-06-05 周五 00:05</p>
+<p class="date">Created: 2020-11-20 周五 23:37</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
