--- a/sitemap.html
+++ b/sitemap.html
@@ -3,11 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<<<<<<< HEAD
-<!-- 2019-05-10 周五 22:47 -->
-=======
-<!-- 2020-08-25 周二 17:52 -->
->>>>>>> c3fec3f7a89acb4fd4a4b87172cec5521e70d3e3
+<!-- 2020-11-20 周五 23:37 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sitemap</title>
@@ -236,36 +232,26 @@ for the JavaScript code in this tag.
 <div id="content">
 <h1 class="title">Sitemap</h1>
 <ul class="org-ul">
-<li><a href="software.html">软件</a></li>
-<<<<<<< HEAD
-<li><a href="index.html">比克曼的知识管理</a></li>
-<li><a href="tool.html">工具</a></li>
-<li><a href="os.html">操作系统</a></li>
-=======
-<li><a href="tool.html">工具</a></li>
-<li><a href="hardware.html">硬件</a></li>
->>>>>>> c3fec3f7a89acb4fd4a4b87172cec5521e70d3e3
-<li><a href="signal.html">信号与系统</a></li>
+<li><a href="tool.html">¹¤¾ß</a></li>
+<li><a href="software.html">Èí¼þ</a></li>
 <li><a href="security.html">°²È«</a></li>
-<li><a href="protocol.html">协议</a></li>
-<li><a href="os.html">操作系统</a></li>
-<li><a href="math.html">数学</a></li>
-<li><a href="language.html">外语学习</a></li>
-<li><a href="index.html">比克曼的知识管理</a></li>
-<li><a href="encyclopedia.html">百科知识</a></li>
-<li><a href="decoration.html">装修日记</a></li>
-<li><a href="communication.html">通信</a></li>
-<li><a href="algorithm.html">算法</a></li>
+<li><a href="index.html">±È¿ËÂüµÄÖªÊ¶¹ÜÀí</a></li>
+<li><a href="hardware.html">Ó²¼þ</a></li>
+<li><a href="os.html">²Ù×÷ÏµÍ³</a></li>
+<li><a href="signal.html">ÐÅºÅÓëÏµÍ³</a></li>
+<li><a href="protocol.html">Ð­Òé</a></li>
+<li><a href="math.html">ÊýÑ§</a></li>
+<li><a href="language.html">ÍâÓïÑ§Ï°</a></li>
+<li><a href="encyclopedia.html">°Ù¿ÆÖªÊ¶</a></li>
+<li><a href="decoration.html">×°ÐÞÈÕ¼Ç</a></li>
+<li><a href="communication.html">Í¨ÐÅ</a></li>
+<li><a href="algorithm.html">Ëã·¨</a></li>
 </ul>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 比克曼</p>
 <p class="email">Email: <a href="mailto:bitman@163.com">bitman@163.com</a></p>
-<<<<<<< HEAD
-<p class="date">Created: 2019-05-10 周五 22:47</p>
-=======
-<p class="date">Created: 2020-08-25 周二 17:52</p>
->>>>>>> c3fec3f7a89acb4fd4a4b87172cec5521e70d3e3
+<p class="date">Created: 2020-11-20 周五 23:37</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
